Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16647

InnoDB fails to drop large temporary table on disconnect

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.35
    • 10.1.36
    • Tests, MTR
    • None

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest-big/builds/1907

      10.1 be5698265a4195586142d1a34fdd1cce

      innodb.sp_temp_table 'xtradb'            w2 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2018-06-27 22:34:49
      line
      2018-06-27 22:34:48 139627042478848 [Warning] Could not remove temporary table: '/mnt/buildbot/build/mariadb-10.1.35/mysql-test/var/tmp/2/mysqld.1/#sql32e0_3_0', error: 2
      ^ Found warnings in /mnt/buildbot/build/mariadb-10.1.35/mysql-test/var/2/log/mysqld.1.err
      ok
       
       - saving '/mnt/buildbot/build/mariadb-10.1.35/mysql-test/var/2/log/innodb.sp_temp_table-xtradb/' to '/mnt/buildbot/build/mariadb-10.1.35/mysql-test/var/log/innodb.sp_temp_table-xtradb/'
      worker[2] > Restart  - not started
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.