storage/innobase/row/row0mysql.cc
@@ -4222,7 +4222,8 @@ row_drop_table_for_mysql(
 		hold the InnoDB dictionary lock, we will drop any
 		adaptive hash index entries upfront. */
 		while (buf_LRU_drop_page_hash_for_tablespace(table)) {
-			if (trx_is_interrupted(trx)
+			if ((!dict_table_is_temporary(table)
+			     && trx_is_interrupted(trx))
 			    || srv_shutdown_state != SRV_SHUTDOWN_NONE) {
 				err = DB_INTERRUPTED;
 				goto funct_exit;
